# speakerbox

./: CMakeLists.txt  Makefile  README.md  build.sh  meson.build
include/: calculator.h  config.h  sha256.h  ui.h  utils.h
src/: calculator.cpp  config.cpp  main.cpp  sha256.cpp  ui.cpp  utils.cpp
tests/: test_calculator.cpp
